--- a/src/main/java/com/jetbrains/deepbugs/gui/DeepBugsGUI.form
+++ b/src/main/java/com/jetbrains/deepbugs/gui/DeepBugsGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.jetbrains.deepbugs.gui.DeepBugsGUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="true" hgap="1" vgap="1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="1" vgap="1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -12,7 +12,9 @@
     <children>
       <component id="a6620" class="javax.swing.JLabel" binding="thresholdLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="92" height="16"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Threshold, %"/>
@@ -20,12 +22,14 @@
       </component>
       <vspacer id="2d76c">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="92" height="14"/>
+          </grid>
         </constraints>
       </vspacer>
       <component id="7658d" class="javax.swing.JSlider" binding="thresholdSlider">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <majorTickSpacing value="10"/>
@@ -42,6 +46,14 @@
           <Slider.paintThumbArrowShape class="java.lang.Boolean" value="false"/>
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
+      </component>
+      <component id="4ac8e" class="javax.swing.JButton" binding="setDefault">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Default"/>
+        </properties>
       </component>
     </children>
   </grid>
