--- a/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
+++ b/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
@@ -17,7 +17,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="Threshold, %"/>
+          <text resource-bundle="DeepBugsPluginBundle" key="threshold.label"/>
         </properties>
       </component>
       <vspacer id="2d76c">
@@ -52,7 +52,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Default"/>
+          <text resource-bundle="DeepBugsPluginBundle" key="set.default"/>
         </properties>
       </component>
     </children>
