--- a/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
+++ b/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.jetbrains.research.groups.ml_methods.deepbugs.ui.DeepBugsUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="1" vgap="1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="559" height="233"/>
     </constraints>
-    <properties>
-      <enabled value="true"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
-      <component id="a6620" class="javax.swing.JLabel" binding="thresholdLabel">
+      <component id="a1422" class="javax.swing.JLabel" binding="binOperatorThreshold">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="92" height="16"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="DeepBugsPluginBundle" key="threshold.label"/>
+          <text resource-bundle="DeepBugsPluginBundle" key="bin.operator.threshold.label"/>
         </properties>
       </component>
-      <vspacer id="2d76c">
+      <component id="d7e9e" class="javax.swing.JSlider" binding="binOperatorThresholdSlider">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="92" height="14"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <component id="7658d" class="javax.swing.JSlider" binding="thresholdSlider">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <majorTickSpacing value="10"/>
           <minorTickSpacing value="1"/>
           <paintLabels value="true"/>
           <paintTicks value="true"/>
-          <paintTrack value="true"/>
           <snapToTicks value="true"/>
           <value value="0"/>
-          <valueIsAdjusting value="false"/>
         </properties>
-        <clientProperties>
-          <JSlider.isFilled class="java.lang.Boolean" value="false"/>
-          <Slider.paintThumbArrowShape class="java.lang.Boolean" value="false"/>
-          <html.disable class="java.lang.Boolean" value="false"/>
-        </clientProperties>
       </component>
-      <component id="4ac8e" class="javax.swing.JButton" binding="setDefault">
+      <component id="9336f" class="javax.swing.JButton" binding="defaultBinOperatorThreshold">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="DeepBugsPluginBundle" key="set.default"/>
+        </properties>
+      </component>
+      <component id="542f9" class="javax.swing.JLabel" binding="binOperandThreshold">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="DeepBugsPluginBundle" key="bin.operand.threshold.label"/>
+        </properties>
+      </component>
+      <component id="616f7" class="javax.swing.JSlider" binding="binOperandThresholdSlider">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <majorTickSpacing value="10"/>
+          <minorTickSpacing value="1"/>
+          <paintLabels value="true"/>
+          <paintTicks value="true"/>
+          <snapToTicks value="true"/>
+        </properties>
+      </component>
+      <component id="1ec13" class="javax.swing.JButton" binding="defaultBinOperandThreshold">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text resource-bundle="DeepBugsPluginBundle" key="set.default"/>
