--- a/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
+++ b/src/main/java/org/jetbrains/research/groups/ml_methods/deepbugs/ui/DeepBugsUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.jetbrains.research.groups.ml_methods.deepbugs.ui.DeepBugsUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="559" height="253"/>
+      <xy x="20" y="20" width="559" height="370"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -55,6 +55,7 @@
           <paintLabels value="true"/>
           <paintTicks value="true"/>
           <snapToTicks value="true"/>
+          <value value="0"/>
         </properties>
       </component>
       <component id="1ec13" class="javax.swing.JButton" binding="defaultBinOperandThreshold">
@@ -67,9 +68,38 @@
       </component>
       <vspacer id="31388">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="3baa2" class="javax.swing.JLabel" binding="swappedArgsThreshold">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="DeepBugsPluginBundle" key="swapped.args.threshold.label"/>
+        </properties>
+      </component>
+      <component id="3f9f7" class="javax.swing.JSlider" binding="swappedArgsThresholdSlider">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <majorTickSpacing value="10"/>
+          <minorTickSpacing value="1"/>
+          <paintLabels value="true"/>
+          <paintTicks value="true"/>
+          <snapToTicks value="true"/>
+          <value value="0"/>
+        </properties>
+      </component>
+      <component id="4d246" class="javax.swing.JButton" binding="defaultSwappedArgsThreshold">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="DeepBugsPluginBundle" key="set.default"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
